--- a/src/main/resources/templates/search-nickname.html
+++ b/src/main/resources/templates/search-nickname.html
@@ -136,7 +136,12 @@
         bottom : 30px;
     }
 
-    .board-container {
+
+
+
+
+
+            .board-container {
                 width: 80%;
                 margin: 0 auto;
                 margin-top : 60px;
@@ -166,43 +171,21 @@
         display: inline-block;
     }
 
-    main{
-        height : auto;
-    }
-
-    .user{
-        display: flex;
-        height : 160px;
-        border : 2px solid #4a596d85;
-        padding : 20px;
-        padding-left : 50px;
-    }
-    .nickname{
-        margin-left : 50px;
-        margin-right : 60px;
-        line-height: 160px;
-    }
-    .email{
-        line-height: 160px;
-    }
-
-
-
   </style>
 </head>
 <body class="scroll">
 <header>
   <div class="top-header">
     <div style="display : flex;">
-      <a href="/list"> <img src="images/logo.png" max-width="100%" height="40"/> </a>
+      <a href="/list"> <img src="/images/logo.png" max-width="100%" height="40"/> </a>
       <h2>Welcome <!--<span th:text="${boardList.email}"></span>--> !</h2>
     </div>
     <div class="logout">
       <a href="/mypage" class="tooltip" data-tooltip="내 페이지">
-        <img src="images/mypageicon.png" max-width="100%" height="45"/>
+        <img src="/images/mypageicon.png" max-width="100%" height="45"/>
       </a>
       <form method="post" action="/logout">
-        <button class="logout-btn"><img src="images/logout.png" max-width="100%" height="45"/></button><br/>
+        <button class="logout-btn"><img src="/images/logout.png" max-width="100%" height="45"/></button><br/>
       </form>
     </div>
   </div>
@@ -221,15 +204,15 @@
         </select>
         <input type="text" name="keyword" class="form-control" id="search">
         <button type="submit" id="searchButton">
-          <img src="images/searchicon.png" max-width="100%" height="30"/>
+          <img src="/images/searchicon.png" max-width="100%" height="30"/>
         </button>
       </form>
     </div>
 
     <div class="etcmenu">
 
-      <a href="#"><img src="images/bellicon.png" max-width="100%" height="37"/></a>
-      <a href="#"><img src="images/msgicon.png" max-width="100%" height="36"/></a>
+      <a href="#"><img src="/images/bellicon.png" max-width="100%" height="37"/></a>
+      <a href="#"><img src="/images/msgicon.png" max-width="100%" height="36"/></a>
     </div>
 
   </div>
@@ -237,22 +220,22 @@
 
   <div class="quick-menu" id="quickMenu">
     <div class="quick-sebu">
-      <a href="/list"> <img src="images/logo.png" max-width="100%" height="40"/> </a>
+      <a href="/list"> <img src="/images/logo.png" max-width="100%" height="40"/> </a>
 
       <div class="quick-searchbox">
         <select class="quick-search" style="height : 23px;">
           <option value="nickname">닉네임</option>
           <option value="content">내용</option>
         </select>
-        <input><a href="#"><img src="images/searchicon.png" max-width="100%" height="30" style="position : relative; top : 10px; right : 20px;"/></a>
+        <input><a href="#"><img src="/images/searchicon.png" max-width="100%" height="30" style="position : relative; top : 10px; right : 20px;"/></a>
       </div>
 
       <a href="/mypage" class="tooltip" data-tooltip="내 페이지">
-        <img src="images/mypageicon.png" max-width="100%" height="45"/>
+        <img src="/images/mypageicon.png" max-width="100%" height="45"/>
       </a>
 
-      <a href="#"><img src="images/bellicon.png" max-width="100%" height="37"/></a>
-      <a href="#"><img src="images/msgicon.png" max-width="100%" height="36"/></a>
+      <a href="#"><img src="/images/bellicon.png" max-width="100%" height="37"/></a>
+      <a href="#"><img src="/images/msgicon.png" max-width="100%" height="36"/></a>
 
       <form method="post" action="/logout">
         <button class="logout-btn" style="width : 50px;">로그아웃</button><br/>
@@ -265,25 +248,13 @@
 
 
 <main>
-
   <div class="board-container">
-
     <a href="/post" class="write">글쓰기</a>
-
     <th:block th:each="user : ${userList}">
-      <div class="user">
-        <div class="profileimg" style="display:flex;justify-content:center; align-items : center;">
-
-          <img th:src="${dto.profile}" style="width:100px;height:100px;border-radius:50%;" />
-        </div>
-        <div class = "nickname" th:text="${user.nickname}"> nickname</div>
-        <div class="email" th:test="${user.email}">email</div>
-      </div>
-
+      <div th:text="${user.nickname}"> nickname</div>
+      <div th:test="${user.email}">email</div>
     </th:block>
-
   </div>
-
 </main>
 
 </body>
