--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -13,81 +13,88 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 
     <style>
-*{
- font-family: 'Gothic A1', sans-serif;
-}
+        *{
+         font-family: 'Gothic A1', sans-serif;
+        }
 
-body {
- width: 1024px;
- height: 700px;
- margin: 50px auto;
- overflow: auto;
- max-height: 860px;
- position : relative;
- top : 80px;
-}
+        body {
+         width: 1024px;
+         height: 700px;
+         margin: 50px auto;
+         overflow: auto;
+         max-height: 860px;
+         position : relative;
+         top : 80px;
+        }
 
-.big{
-    display : flex;
-    align-items: center;
-    justify-content: space-around;
-}
+        .big{
+            display : flex;
+            align-items: center;
+            justify-content: space-around;
+        }
 
-.loginform{
-    position : relative;
-    right : 100px;
-    width : 400px;
-    height : 600px;
-    display: flex; /* 수직 중앙 정렬을 위해 flex 컨테이너로 설정 */
-    flex-direction: column; /* 하위 요소들을 수직으로 배치 */
-    justify-content: center; /* 수직 가운데 정렬 */
-    align-items: center;
-}
+        .loginform{
+            position : relative;
+            right : 100px;
+            width : 400px;
+            height : 600px;
+            display: flex; /* 수직 중앙 정렬을 위해 flex 컨테이너로 설정 */
+            flex-direction: column; /* 하위 요소들을 수직으로 배치 */
+            justify-content: center; /* 수직 가운데 정렬 */
+            align-items: center;
+        }
 
-.nlogoimg{
-  position : relative;
-  left : 100px;
-}
+        .nlogoimg{
+          position : relative;
+          left : 100px;
+        }
 
-.idpw > input{
-    margin-bottom : 10px;
-    height : 40px;
-    font-size: 13px;
-}
-.form-check{
-  margin-top : 10px;
-  margin-bottom : 20px;
-    font-size: 14px;
-}
+        .idpw > input{
+            margin-bottom : 10px;
+            height : 40px;
+            font-size: 13px;
+        }
+        .form-check{
+          margin-top : 10px;
+          margin-bottom : 20px;
+            font-size: 14px;
+        }
 
-.loginbtn{
-  padding-bottom : 20px;
-  margin-bottom : 30px;
-  border-bottom : 1px solid gray;
-}
-.jechul{
-    width : 183px;
-    height : 45px;
-    margin-top : 10px;
-    margin-bottom : 5px;
-    background-color: #4a596d;
-    border-radius: 7px;
-    color : #cfd7e0;
-    border-style: none;
-    font-size: 15px;
-    cursor: pointer;
-}
-.join{
-    position : relative;
-    left : 515px;
-    bottom : 50px;
-}
+        .loginbtn{
+          padding-bottom : 20px;
+          margin-bottom : 30px;
+          border-bottom : 1px solid gray;
+        }
+        .btn-lg{
+            width : 183px;
+            height : 45px;
+            margin-bottom : 20px;
+            border-radius: 7px;
+            color : #cfd7e0;
+            border-style: none;
+            font-size: 15px;
+            cursor: pointer;
+        }
 
-.otherlogin>div{
-  margin-bottom : 10px;
-}
+        .find{
+            position : relative;
+            left : 515px;
+            bottom : 80px;
+        }
+        .join{
+            position : relative;
+            left : 515px;
+            bottom : 80px;
+        }
 
-</style>
+        .otherlogin{
+            display: flex;
+        }
+        .otherlogin>div:first-child{
+            margin-right : 20px;
+        }
+
+    </style>
 
 </head>
 <body>
@@ -110,16 +117,21 @@ body {
             </div>
 
             <div class="loginbtn">
-                <input type="submit" class="jechul" value="HAMOHAMO 로그인"/>
+                <!-- <input type="submit" class="jechul" value="HAMOHAMO 로그인"/> -->
+                <button type="submit" class="btn btn-secondary btn-lg">Login</button>
             </div>
 
         </form>
         <div class="otherlogin">
-            <div><a href="/oauth2/authorization/kakao"><img src="images/kakaologin.png" width=183px height=45px/></a></div>
-            <div><a href="/oauth2/authorization/naver"><img src="images/naverlogin.png" width=183px height=45px/></a></div>
+            <div><a href="/oauth2/authorization/kakao"><img src="images/kakaologin.png" width=100% height=45px/></a></div>
+            <div><a href="/oauth2/authorization/naver"><img src="images/naverlogin.png" width=100% height=45px/></a></div>
         </div>
     </div>
 
+</div>
+
+<div class="find">
+    <a href="#">아이디/비밀번호 찾기</a>
 </div>
 
 <div class="join">
